XDGKit (1.0.0-1)

  # New Features

  * Themes can now be loaded and mapped from cache files, reducing both loading times and memory usage.
  * New xdgkit-icon-theme-indexer utility for generating cache files.

  # API Additions/Changes

  * Replaced most std::string instances with std::string_view to enable direct mapping from cache.
  * Added XDGIconThemeManager::reloadThemes() to dynamically rescan and reload themes.
  * Added XDGIconThemeManager::evictCache() to free up memory by evicting theme data that won’t be accessed in the near future.

  Thanks to @Fox2Code and @milisarge for your ideas/suggestions

-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Tue, 27 May 2025 08:42:15 -0400


XDGKit (0.1.0-1)

  # First Release

  * Icon theme indexing and search utilities.
  * INI files parser.

-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Sat, 22 Mar 2025 21:39:41 -0300