@@ -1,3 +1,4 @@
 # ⚙️ Environment Variables {#environment_page}
 
-For comprehensive details, refer to the [XDG Icon Theme Specification](https://specifications.freedesktop.org/icon-theme-spec/latest/#overview).
+- **XDGKIT_DEBUG**: Logging verbosity level (0-4). Default is 0.
+- **XDG_DATA_DIRS**: For detailed information, see the [XDG Icon Theme Specification](https://specifications.freedesktop.org/icon-theme-spec/latest/#overview).
