@@ -10,6 +10,7 @@ XDGKit (1.0.0-1)
   * Replaced most std::string instances with std::string_view to enable direct mapping from cache.
   * Added XDGIconThemeManager::reloadThemes() to dynamically rescan and reload themes.
   * Added XDGIconThemeManager::evictCache() to free up memory by evicting theme data that won’t be accessed in the near future.
+  * Added XDGLog class.
 
   Thanks to @Fox2Code and @milisarge for your ideas/suggestions
 
